# gitstafette-discovery

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.autometrics/prometheus/data/wal/: 00000000
docker/alpine/: Dockerfile
docker/cross/: Dockerfile
kubernetes/: app.yaml
protos/: gitstafette_discovery.proto  gitstafette_info.proto
